# BankSystem

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: Account.h  BankSystem.h  DatabaseManager.h  Deposit.h  FinancialProduct.h  Transaction.h  TransactionData.h  User.h  Wallet.h  common.h
scripts/: BankSystem.sql
src/: BankSystem.cpp  DatabaseManager.cpp  main.cpp
